# internal/treasury/adapters/db/dbmodels/wallet_allocations.sql.go
@@ -1,6 +1,6 @@
 // Code generated by sqlc. DO NOT EDIT.
 // versions:
-//   sqlc v1.31.1
+//   sqlc v1.27.0
 // source: wallet_allocations.sql
 
 package dbmodels
@@ -9,6 +9,7 @@ import (
 	"context"
 
 	"github.com/shopspring/decimal"
+	"sumni-finance-backend/internal/common"
 	"sumni-finance-backend/internal/treasury/domain"
 )
 
@@ -39,6 +40,55 @@ func (q *Queries) GetAllocationsByWalletUUID(ctx context.Context, walletUuid dom
 	items := []GetAllocationsByWalletUUIDRow{}
 	for rows.Next() {
 		var i GetAllocationsByWalletUUIDRow
+		if err := rows.Scan(
+			&i.TreasuryWalletAllocation.WalletUuid,
+			&i.TreasuryWalletAllocation.FundSourceUuid,
+			&i.TreasuryWalletAllocation.Balance,
+			&i.TreasuryFundSource.FundSourceUuid,
+			&i.TreasuryFundSource.Name,
+			&i.TreasuryFundSource.SourceType,
+			&i.TreasuryFundSource.Currency,
+			&i.TreasuryFundSource.Balance,
+			&i.TreasuryFundSource.AvailableBalance,
+			&i.TreasuryFundSource.BankInfo,
+			&i.TreasuryFundSource.Bin,
+			&i.TreasuryFundSource.BankAccountNumber,
+			&i.TreasuryFundSource.BankAccountOwner,
+			&i.TreasuryFundSource.CashOwner,
+			&i.TreasuryFundSource.TenantID,
+			&i.TreasuryFundSource.OfficeID,
+		); err != nil {
+			return nil, err
+		}
+		items = append(items, i)
+	}
+	if err := rows.Err(); err != nil {
+		return nil, err
+	}
+	return items, nil
+}
+
+const getAllocationsByWalletUUIDs = `-- name: GetAllocationsByWalletUUIDs :many
+SELECT wa.wallet_uuid, wa.fund_source_uuid, wa.balance, fs.fund_source_uuid, fs.name, fs.source_type, fs.currency, fs.balance, fs.available_balance, fs.bank_info, fs.bin, fs.bank_account_number, fs.bank_account_owner, fs.cash_owner, fs.tenant_id, fs.office_id
+FROM treasury.wallet_allocations wa
+    JOIN treasury.fund_sources fs ON fs.fund_source_uuid = wa.fund_source_uuid
+WHERE wa.wallet_uuid = ANY($1::uuid[])
+`
+
+type GetAllocationsByWalletUUIDsRow struct {
+	TreasuryWalletAllocation TreasuryWalletAllocation
+	TreasuryFundSource       TreasuryFundSource
+}
+
+func (q *Queries) GetAllocationsByWalletUUIDs(ctx context.Context, walletUuids []common.UUID) ([]GetAllocationsByWalletUUIDsRow, error) {
+	rows, err := q.db.Query(ctx, getAllocationsByWalletUUIDs, walletUuids)
+	if err != nil {
+		return nil, err
+	}
+	defer rows.Close()
+	items := []GetAllocationsByWalletUUIDsRow{}
+	for rows.Next() {
+		var i GetAllocationsByWalletUUIDsRow
 		if err := rows.Scan(
 			&i.TreasuryWalletAllocation.WalletUuid,
 			&i.TreasuryWalletAllocation.FundSourceUuid,
